Add checker for MISRA C:2012 rule 15.7

--- a/doc/c2012.md
+++ b/doc/c2012.md
@@ -157,7 +157,7 @@ Control flow
 | 15.4  | TBD                   |                                              |
 | 15.5  | TBD                   |                                              |
 | 15.6  | TBD                   |                                              |
-| 15.7  | TBD                   |                                              |
+| 15.7  | misra-c2012-15.7      |                                              |
 
 Switch statements
 =================
