Add information for checking MISRA C:2012 rule 2.7

--- a/doc/c2012.md
+++ b/doc/c2012.md
@@ -16,7 +16,7 @@ Unused code
 | 2.4   | unsupported           | Wishlist test existing                       |
 | 2.5   | unsupported           | partial coverage: `-Wunused-macros`          |
 | 2.6   | `-Wunused-label`      |                                              |
-| 2.7   | TBD                   |                                              |
+| 2.7   | `-Wunused-parameter`  |                                              |
 
 Comments
 ========
